# ds-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pyproject.toml.old  setup.cfg  setupcfg.old
docs/: conf.py
src/pyscaffoldext/ds_template/: __init__.py  extension.py
src/pyscaffoldext/ds_template/templates/: contributing.template  env.template  gitignore_data.template  my_dag_py.template  pre-commit-config.template  pyproject_toml.template  pytest.template  readme_md.template  ruff_toml.template  template_ipynb.template
tests/: test_add_install_requires.py  test_custom_extension.py  test_entry_points.py  test_files.py  test_generated_extension.py  test_set_default_command.py
