[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "A template for Data Science projects."
readme = "README.md"
license = "MIT"
authors = ["Altieris Peixoto"]

packages = [
    { include = "pyscaffoldext", from = "./src" }  # Removed trailing slash for consistency
]
 
[tool.poetry.dependencies]
PyScaffold = "^4.5.0"
python = "^3.10"  # Using caret allows for updates within compatible versions, no need to specify upper limit unless necessary
hydra-core = "^1.3.2"
dvc = "^3.51.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"

[tool.poetry.plugins."pyscaffold.cli"]
ds_template = "pyscaffoldext.ds_template.extension:CustomExtension"

[tool.black]
line-length = 110
target-version = ["py310"]  # Updated to reflect the supported Python version

[tool.isort]
profile = "black"
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["src"]
force_grid_wrap = 0
use_parentheses = true
known_local_folder = ["src", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --tb=native --cov=src"

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]  # More explicit directive for excluding lines from coverage
show_missing = true
omit = ["*/__init__.py", "*/config.py"]  # Example of omitting files that typically don't need coverage

[build-system]
requires = ["poetry-core>=1.8.0"]  # Specify a more recent patch version if needed
build-backend = "poetry.core.masonry.api"
