[project]
name = "ds-template"
version = "0.1.0"
description = "A template for Data Science projects."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Altieris Peixoto" }]

requires-python = ">=3.10"
dependencies = ["PyScaffold>=4.5.0", "hydra-core>=1.3.2", "dvc>=3.51.2"]

[project.optional-dependencies]
dev = ["pytest>=7.1.1", "pytest-cov>=3.0.0", "pre-commit>=2.17.0"]

[project.entry-points."pyscaffold.cli"]
ds_template = "pyscaffoldext.ds_template.extension:CustomExtension"

[tool.black]
line-length = 110
target-version = ["py310"] # Updated to reflect the supported Python version

[tool.isort]
profile = "black"
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["src"]
force_grid_wrap = 0
use_parentheses = true
known_local_folder = ["src", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --tb=native --cov=src"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
] # More explicit directive for excluding lines from coverage
show_missing = true
omit = [
    "*/__init__.py",
    "*/config.py",
] # Example of omitting files that typically don't need coverage

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyscaffoldext"]
